add trailing `_` to test function definitions to disambiguate from real functions

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,11 +1,16 @@
 # Example makefile
-
 .SILENT:
+
+TESTY_ROOT_DIR = ..
+
 .PHONY: all
 
-all: main
+all: main test
 
 C_SRCS = $(wildcard *.c)
 
 main: $(C_SRCS)
 	gcc -I ../ $^ -o $@
+
+test: $(C_SRCS)
+	CC="gcc -I$(abspath .)" $(TESTY_ROOT_DIR)/testy.py $^
