--- a/example/Makefile
+++ b/example/Makefile
@@ -2,6 +2,7 @@
 .SILENT:
 
 TESTY_ROOT_DIR = ..
+CC ?= gcc
 
 .PHONY: all
 
@@ -10,7 +11,7 @@ all: main test
 C_SRCS = $(wildcard *.c)
 
 main: $(C_SRCS)
-	gcc -I ../ $^ -o $@
+	gcc -I $(TESTY_ROOT_DIR) $^ -o $@
 
 test: $(C_SRCS)
-	CC="gcc -I$(abspath .)" $(TESTY_ROOT_DIR)/testy.py $^
+	CC="$(CC) -I$(abspath .)" $(TESTY_ROOT_DIR)/testy.py $^
