--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,14 +4,14 @@ repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
-    -   id: check-added-large-files
-    -   id: check-case-conflict
-    -   id: check-executables-have-shebangs
-    -   id: check-json
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: pretty-format-json
-    -   id: trailing-whitespace
+    -   id: check-added-large-files  # Prevent giant files from being committed
+    -   id: check-case-conflict  # Check for files that would conflict in case-insensitive filesystems
+    -   id: check-executables-have-shebangs  # Ensures that (non-binary) executables have a shebang.
+    -   id: check-json  # This hook checks json files for parseable syntax.
+    -   id: check-yaml  # This hook checks yaml files for parseable syntax.
+    -   id: end-of-file-fixer  # Ensures that a file is either empty, or ends with one newline.
+    -   id: pretty-format-json  # This hook sets a standard for formatting JSON files.
+    -   id: trailing-whitespace  # This hook trims trailing whitespace.
 -   repo: https://github.com/psf/black
     rev: 20.8b1
     hooks:
